poniendo al dia y sincronizando

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -721,6 +721,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 800, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "img = np.zeros((800,800,3),dtype=np.uint8)\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$pbkdf2-sha256$29000$01pL6R2DkHJuTclZC0HIGQ$xBsq86Qpvcn9e4VYUl4rI.mmcbl6xz.7SIOlRzEAmjg'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from passlib.hash import pbkdf2_sha256 as ph\n",
+    "\n",
+    "password = \"dslknvsd sdfm\"\n",
+    "hash_password = ph.hash(password)\n",
+    "\n",
+    "hash_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph.verify(\"dslknvsd sdfm\",hash_password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = \"s jsdkfljsd\"\n",
+    "splitear = user.encode(\"utf-8\").split()\n",
+    "len(splitear[0]) > 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
